<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@drawable/cool1" 
    >

    <!-- Header aligned to top -->

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="#6699FF"
        android:gravity="center" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textStyle="bold"
            android:text="@string/assignment_help_"
            android:textColor="#FFFFFF"
            android:textSize="23sp" />
    </RelativeLayout>

        
        <!-- Footer aligned to bottom -->

    <ImageView
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="80dp"

        android:src="@drawable/hw"
        android:scaleType="center"
        android:gravity="center" />

    <EditText
        android:id="@+id/et_userName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="22dp"
        android:ems="10"
        android:textStyle="normal"
        android:textSize="24sp"
        android:gravity="center"
        android:drawableLeft="@drawable/lock"
        android:hint="Screen Name"
        android:inputType="textPersonName"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="35dp"
            android:layout_marginStart="25dp"
            android:layout_centerVertical="true"
            android:layout_height="35dp"
            android:clickable="false"
            android:layout_alignTop="@+id/et_password"
            android:background="@drawable/user"
            android:layout_marginLeft="25dp" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textStyle="normal"
        android:textSize="24sp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center"
        android:hint="Password"
        android:inputType="textPassword" />

    </RelativeLayout>



    <Button
        android:id="@+id/browse1111"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="42dp"
        android:layout_gravity="center_horizontal"
        android:background="#28e7b2"
        android:gravity="center"
        android:onClick="invokeLogin"
        android:text="Login"
        android:textColor="#FFFFFF" />
    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="50dp"
        android:textSize="13sp"
        android:text="@string/txt_hint_register"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tv_forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="13sp"
        android:layout_marginBottom="13dp"
        android:text="@string/txt_hint_forgot_password"
        android:textAppearance="?android:attr/textAppearanceMedium" />








    <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#666666"
        android:gravity="center" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="All Rights Reserved ?"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />
    </RelativeLayout>



</LinearLayout>